--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -187,7 +187,11 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
 <div className="subheading">Learn</div>
 
 <div className="link-list">
-	<a className="link-item" href="https://storybook.js.org/docs" target="_blank">
+	<a
+		className="link-item"
+		href="https://storybook.js.org/docs"
+		target="_blank"
+	>
 		<div className="link-item-img-wrapper">
 			<Image src={Repo} alt="repo" />
 		</div>
@@ -222,7 +226,11 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
 			View the source and add issues
 		</span>
 	</a>
-	<a className="link-item" href="https://discord.gg/storybook" target="_blank">
+	<a
+		className="link-item"
+		href="https://discord.gg/storybook"
+		target="_blank"
+	>
 		<div className="link-item-img-wrapper">
 			<Image src={Comments} alt="comments" />
 		</div>
